--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ main{
 
 /* For Mini Mobile Device */
 
-@media screen and (max-width:668px) {
+@media screen and (max-width:576px) {
     .header{
         display: flex;
         flex-direction: column;
@@ -316,3 +316,97 @@ main{
 }
 
 }
+.hide{
+    display: none;
+}
+
+ /* Medium devices (tablets, 577px and 768px) */
+
+
+ @media screen and (min-width:577px) and (max-width:768px) {
+    .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+.container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 36px;
+    margin-top: 50px;
+}
+.container-text {
+    margin-top: 60px;
+}
+.container-experince-part{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 30px;
+}
+.images img{
+    margin-top: 0;
+    padding: 20px;
+}
+.button {
+    position: relative;
+    height: 80px;
+    width: 170px;
+    color: white;
+    left: 250px;
+    margin-top: 100px;
+    padding: 10px 20px;
+    background: #FF900E;
+    text-align: center;
+}
+.mr-top{
+    margin-top: 0px;
+}
+.events h2{
+    font-size: 40px;
+    font-weight: 700px;
+    text-align: center;
+}
+.events p{
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+}
+.achievement {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 40px;
+    margin-top: 30px;
+    padding: 30px;
+    
+}
+.Featured {
+    display: flex;
+    gap: 80px;
+    margin-top: 80px;
+    flex-direction: column;
+}
+.feature-images img{
+    width: 100%;
+    padding: 20px;
+}
+.details{
+    text-align: center;
+}
+.sponspors-company {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+    margin-top: 50px;
+    padding: 20px;
+}
+.footer {
+    height: 60px;
+    background: #FFF4E7;
+    border-radius: 8px;
+    text-align: center;
+    margin: 50px;
+    padding: 20px 30px;
+}
+
+ }
