--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ main{
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     width: 100%;
+    margin-top: 40px;
 }
 /* container text part style  */
 
