--- a/style.css
+++ b/style.css
@@ -142,10 +142,16 @@ main{
 
 /* All Event style  */
 
-.events h2{
+.achive-text-part{
+    text-align: center;
+    width: 60%;
+    margin: 0 auto;
+}
+.achive-text-part h2{
     font-size: 40px;
     font-weight: 700px;
-}
+} 
+
 .achievement{
     display: flex;
     justify-content: space-evenly;
@@ -270,9 +276,11 @@ main{
     padding: 10px 20px;
     background: #FF900E;
     text-align: center;
+    left: 100px;
+    top: 20px;
 }
-.mr-top {
-    margin-top: 80px;
+.events{
+    margin-top: 50px;
     text-align: center;
 }
 .events p{
@@ -288,23 +296,29 @@ main{
 .Featured {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 20px;
     margin-top: 50px;
 }
 .feature-images img{
     width: 100%;
     padding: 20px;
 }
-.feature-title h2, p{
-    padding: 20px;
+
+.feature-title{
+    text-align: center;
+    width: 60%;
+    margin: 0 auto;
 }
 .details{
     text-align: center;
 }
 .sponspor-title {
     text-align: center;
-    margin-top: 60px;
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 50px;
 }
+
 .sponspors-company {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -360,7 +374,6 @@ main{
     height: 80px;
     width: 170px;
     color: white;
-    left: 250px;
     margin-top: 100px;
     padding: 10px 20px;
     background: #FF900E;
