--- a/style.css
+++ b/style.css
@@ -378,6 +378,7 @@ main{
     padding: 10px 20px;
     background: #FF900E;
     text-align: center;
+    left: 250px;
 }
 .mr-top{
     margin-top: 0px;
