--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header{
 }
 .banner-text{
     text-align: center;
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
 }
 .banner h2{
@@ -268,6 +268,9 @@ main{
     margin-top: 20px;
     width: 100%;
     height: 420px;
+}
+.banner-text{
+    width: 100%;
 }
 .button {
     position: relative;
