--- a/style.css
+++ b/style.css
@@ -219,16 +219,17 @@ main{
 /* footer style */
 
 .footer{
-    height: 60px;
+    
     background: #FFF4E7;
     border-radius: 8px;
     text-align: center;
-    margin:50px;
-    padding: 20px 30px;
-
+    padding: 30px 0px;
+    margin-top: 50px;
 }
 
-/* For Mini Mobile Device */
+/* ----------------------
+For Mini Mobile Device 
+-----------------------*/
 
 @media screen and (max-width:576px) {
     .header{
@@ -287,7 +288,6 @@ main{
     text-align: center;
 }
 .events p{
-    padding: 20px;
     width: 100%;
 }
 .achievement {
