--- a/style.css
+++ b/style.css
@@ -219,9 +219,7 @@ main{
 /* footer style */
 
 .footer{
-    
     background: #FFF4E7;
-    border-radius: 8px;
     text-align: center;
     padding: 30px 0px;
     margin-top: 50px;
@@ -280,8 +278,10 @@ For Mini Mobile Device
     padding: 10px 20px;
     background: #FF900E;
     text-align: center;
-    left: 100px;
-    top: 20px;
+    left: 0px;
+    top: 0px;
+    margin: 0 auto;
+    margin-top: 20px;
 }
 .events{
     margin-top: 50px;
@@ -337,12 +337,10 @@ For Mini Mobile Device
 }
 
 .footer{
-    height: 100px;
     background: #FFF4E7;
-    border-radius: 8px;
     text-align: center;
-    margin: 50px;
-
+    padding: 30px 0px;
+    margin-top: 50px;
 }
 
 }
@@ -428,13 +426,11 @@ For Mini Mobile Device
     margin-top: 50px;
     padding: 20px;
 }
-.footer {
-    height: 60px;
+.footer{
     background: #FFF4E7;
-    border-radius: 8px;
     text-align: center;
-    margin: 50px;
-    padding: 20px 30px;
+    padding: 30px 0px;
+    margin-top: 50px;
 }
 
  }
